WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44773
REGRESSION: some tests no longer painting
https://bugs.webkit.org/show_bug.cgi?id=44773
Summary
REGRESSION: some tests no longer painting
Tony Chang
Reported
2010-08-27 09:43:22 PDT
After
http://trac.webkit.org/changeset/66223
, three tests started failing pixel tests on the Chromium bots: fast/canvas/canvas-as-image.html fast/canvas/canvas-as-image-incremental-repaint.html fast/gradients/generated-gradients.html It seems that they're not painting the background at all. I'm building webkit-mac to see if this also happens in Safari.
Attachments
Patch
(2.10 KB, patch)
2010-08-27 23:53 PDT
,
Nikolas Zimmermann
krit
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2010-08-27 09:46:43 PDT
Yup, repros in Safari too. Here are the pixel results:
http://trac.webkit.org/export/66223/trunk/LayoutTests/platform/mac/fast/canvas/canvas-as-image-expected.png
http://build.chromium.org/buildbot/layout_test_results/webkit-rel-webkit-org/results/layout-test-results/fast/canvas/canvas-as-image-actual.png
http://trac.webkit.org/export/66223/trunk/LayoutTests/platform/mac/fast/canvas/canvas-as-image-incremental-repaint-expected.png
http://build.chromium.org/buildbot/layout_test_results/webkit-rel-webkit-org/results/layout-test-results/fast/canvas/canvas-as-image-incremental-repaint-actual.png
http://trac.webkit.org/export/66223/trunk/LayoutTests/platform/mac/fast/gradients/generated-gradients-expected.png
http://build.chromium.org/buildbot/layout_test_results/webkit-rel-webkit-org/results/layout-test-results/fast/gradients/generated-gradients-actual.png
Nikolas Zimmermann
Comment 2
2010-08-27 13:04:24 PDT
Thanks for the report, I'll investigate tomorrow, about to go to bed. Are you sure these are the only tests which are broken?
Tony Chang
Comment 3
2010-08-27 13:32:23 PDT
(In reply to
comment #2
)
> Thanks for the report, I'll investigate tomorrow, about to go to bed. > Are you sure these are the only tests which are broken?
These are the only layout tests that regressed on the chromium bots (across windows, mac and linux). It's possible for there to be a test that chromium was already failing, in which case a regression would not be noticed.
Tony Chang
Comment 4
2010-08-27 18:44:23 PDT
I suspect fast/canvas/webgl/css-webkit-canvas-repaint.html and fast/canvas/webgl/css-webkit-canvas.html are failing for the same reason. I bet the pixel results were generated before
r66223
was landed.
Nikolas Zimmermann
Comment 5
2010-08-27 23:53:53 PDT
Created
attachment 65813
[details]
Patch
Dirk Schulze
Comment 6
2010-08-27 23:56:25 PDT
Comment on
attachment 65813
[details]
Patch r=me
Nikolas Zimmermann
Comment 7
2010-08-27 23:57:03 PDT
Landed in
r66299
. Tony, can you verify the regression is gone? All tests you mentioned work again for me in Safari.
WebKit Review Bot
Comment 8
2010-08-28 00:30:54 PDT
http://trac.webkit.org/changeset/66299
might have broken Qt Linux Release
Tony Chang
Comment 9
2010-08-30 09:17:47 PDT
(In reply to
comment #7
)
> Landed in
r66299
. > > Tony, can you verify the regression is gone? > All tests you mentioned work again for me in Safari.
Yes, the regression is gone. Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug