2010-08-27  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Dirk Schulze.

        REGRESSION: some tests no longer painting
        https://bugs.webkit.org/show_bug.cgi?id=44773

        Fix regression from the RenderImageResource introduction, fast/canvas/canvas-as-image.html
        and fast/canvas/canvas-as-image-incremental-repaint.html pixel tests did not work anymore.

        * rendering/RenderImageResource.h:
        (WebCore::RenderImageResource::hasImage): Make hasImage virtual.
        * rendering/RenderImageResourceStyleImage.h:
        (WebCore::RenderImageResourceStyleImage::hasImage): Always return true, just like RenderImageGeneratedContent did.


Canonical link: https://commits.webkit.org/57066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66299 268f45cc-cd09-0410-ab3c-d52691b4dbfc